package com.example.blob_game;

import android.graphics.Canvas;
import android.view.SurfaceHolder;

public class GameLoop extends Thread {

	public static final float MAX_UPS = 60;
	public static final double UPS_PERIOD = 1E+3 / MAX_UPS;
	static GameLoop gameLoop; // singleton instance
	final SurfaceHolder surfaceHolder;
	boolean isRunning;
	Game game;
	double avgUPS;
	double avgFPS;

	GameLoop(Game game, SurfaceHolder surfaceHolder) {
		this.game = game;
		this.surfaceHolder = surfaceHolder;
	}

	public static GameLoop getInstance(Game game, SurfaceHolder surfaceHolder) {
		if (gameLoop == null)
			gameLoop = new GameLoop(game, surfaceHolder);

		return gameLoop;
	}

	public static GameLoop getInstance() {
		return gameLoop;
	}

	public double getAvgUPS() {
		return avgUPS;
	}

	public double getAvgFPS() {
		return avgFPS;
	}

	public void startLoop() {
		isRunning = true;

		start();
	}

	@Override
	public void run() {
		super.run();

		int updateCount = 0;
		int frameCount = 0;

		long startTime;
		long elapsedTime;
		long sleepTime;

		// Game loop
		Canvas canvas = null;
		startTime = System.currentTimeMillis();
		while (isRunning) {
			// Try to update and render game
			try {
				canvas = surfaceHolder.lockCanvas();
				synchronized (surfaceHolder) {
					game.update();
					updateCount++;

					game.draw(canvas);
				}
			} catch (IllegalArgumentException e) {
				e.printStackTrace();
			} finally {
				if (canvas != null) {
					try {
						surfaceHolder.unlockCanvasAndPost(canvas);
						frameCount++;
					} catch (Exception e) {
						e.printStackTrace();
					}
				}
			}

			// Pause game loop to not exceed target UPS
			elapsedTime = System.currentTimeMillis() - startTime;
			sleepTime = (long) (updateCount * UPS_PERIOD - elapsedTime);
			if (sleepTime > 0) {
				try {
					sleep(sleepTime); // Lag
				} catch (InterruptedException e) {
					e.printStackTrace();
				}
			}

			// Skip frames to keep up with target UPS
			while (sleepTime < 0 && updateCount < MAX_UPS - 1) {
				game.update();
				updateCount++;
				elapsedTime = System.currentTimeMillis() - startTime;
				sleepTime = (long) (updateCount * UPS_PERIOD - elapsedTime);
			}

			// Calculate average UPS and FPS
			elapsedTime = System.currentTimeMillis() - startTime;
			if (elapsedTime >= 1000) {
				avgUPS = updateCount / (1E-3 * elapsedTime);
				avgFPS = frameCount / (1E-3 * elapsedTime);
				updateCount = 0;
				frameCount = 0;
				startTime = System.currentTimeMillis();
			}
		}
	}

	public void stopLoop() {
		isRunning = false;
		try {
			join();
		} catch (InterruptedException e) {
			e.printStackTrace();
		}
	}
}
